# flipped_seven

./: .gitignore  ADMIN_README.md  BUILDING_A_BOT.md  COMPETITOR_README.md  DEBUGGING.md  README.md  README.md.bak  RULES.md  mypy.ini  pyproject.toml  tournament_config.py
.github/workflows/: ci.yml
examples/: large_tournament.py  sample_tournament_config.py
flip7/: constants.py  hosted_cli.py
flip7/bots/: __init__.py  base.py  conservative_bot.py  hit17_bot.py  random_bot.py  sandbox.py  scaredy_bot.py  timeout_bot.py
flip7/cli/: __init__.py  demo.py  main.py  step_round.py  test_stepper.sh
flip7/core/: __init__.py  deck.py  game_engine.py  round_engine.py  scoring.py  validator.py
flip7/events/: __init__.py  event_logger.py  event_replay.py  event_serializer.py
flip7/tournament/: __init__.py  config.py  match.py  orchestrator.py  results.py  round_robin.py  round_robin_runner.py  simple_runner.py
flip7/types/: __init__.py  bot_interface.py  cards.py  errors.py  events.py  game_state.py
flip7/utils/: __init__.py  bot_discovery.py  config_validator.py  debug_helpers.py  logging_config.py  round_stepper.py  time_tracker.py  tournament_analyzer.py
hosted/: README.md
hosted/app/: README.md  flip7_api_cli.py  pyproject.toml
hosted/app/hosted_api/: __init__.py  config.py
hosted/app/hosted_api/handlers/: get_leaderboard.py  get_my_bot.py  publish_leaderboard.py  response.py  run_tournament.py  submit_bot.py
hosted/app/hosted_api/services/: auth.py  bot_loader.py  bots.py  db.py  runs.py  tokens.py  tournament.py  validation.py
hosted/app/tests/: conftest.py  test_submit_bot.py
hosted/infra/terraform/: main.tf  variables.tf
hosted/scripts/: build_lambda.sh  deploy_lambda.sh  run_local.sh
tests/: test_action_cards.py  test_bot_compliance.py  test_bot_timeout.py  test_busting_rules.py  test_cli_validation.py  test_config_validator.py  test_debug_helpers.py  test_deck_exhaustion_rules.py  test_deck_persistence.py  test_flip7_bonus.py  test_flip_three_queueing.py  test_freeze_mechanics.py  test_game_end_conditions.py  test_game_engine.py  test_integration_validation.py  test_logging_config.py  test_modifier_stacking.py  test_sandbox_windows.py  test_scoring_rules.py  test_second_chance_targeting.py  test_second_chance_usage.py  test_time_tracker.py  test_tournament.py
