[project]
name = "flip7"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.41",
    "click>=8.1.0",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pytest>=9.0.2",
    "rich>=13.0.0",
    "scikit-learn>=1.8.0",
]

[project.scripts]
flip7 = "flip7.cli.main:cli"
flip7-step = "flip7.cli.step_round:main"
flip7-demo = "flip7.cli.demo:main"
flip7-admin-seed-token = "flip7.hosted_cli:main"
flip7-api-submit-bot = "flip7.hosted_cli:main"
flip7-api-get-me = "flip7.hosted_cli:main"
flip7-admin-run-tournament = "flip7.hosted_cli:main"
flip7-admin-publish = "flip7.hosted_cli:main"
flip7-api-leaderboard = "flip7.hosted_cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.7.0",
    "ruff>=0.1.0",
    "types-click>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "rich.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "click.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.uv.workspace]
members = ["hosted/app"]
