[project]
name = "flip7-hosted"
version = "0.1.0"
description = "Hosted API + workers for Flip 7 tournament system"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "TBD"}

dependencies = [
  "boto3>=1.34",
  "pytest>=8.0",
  "moto[dynamodb]>=5.0",
  "requests>=2.31",
  "flip7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["hosted_api"]

[tool.uv.sources]
flip7 = { workspace = true }

[project.optional-dependencies]
local = [
  "localstack-client>=2.5",
]


[tool.pytest.ini_options]
addopts = "-q"
